# antichess

./: .gitignore  README.md  pyproject.toml
antichess_data/: __init__.py  annotate.py  convert_jsonl.py  engine.py  evaluate.py  finetune.py  load_games.py  parse_games.py  pipeline.py  utils.py  validate.py  write_bags.py
src/: config.py  data_loader.py
